--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -7,7 +7,7 @@
     <title>CRUD Nodejs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- # Navegacion -->
-    <link rel="stylesheet" href="http://bootswatch.com/5/minty/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 </head>
 <body>
 
